--- a/config/AutoTranslatorConfig.ini
+++ b/config/AutoTranslatorConfig.ini
@@ -22,7 +22,7 @@ EnableTextMesh=False
 EnableFairyGUI=True
 
 [Behaviour]
-MaxCharactersPerTranslation=200
+MaxCharactersPerTranslation=2500
 IgnoreWhitespaceInDialogue=True
 MinDialogueChars=20
 ForceSplitTextAfterCharacters=0
@@ -32,12 +32,12 @@ ClipboardDebounceTime=1.25
 EnableUIResizing=True
 EnableBatching=True
 UseStaticTranslations=True
-OverrideFont=Microsoft YaHei
+OverrideFont=
 OverrideFontSize=
-OverrideFontTextMeshPro=BepInEx\arialuni_sdf_u2019
-FallbackFontTextMeshPro=BepInEx\arialuni_sdf_u2018
+OverrideFontTextMeshPro=
+FallbackFontTextMeshPro=BepInEx\RiccaV13
 ResizeUILineSpacingScale=
-ForceUIResizing=False
+ForceUIResizing=True
 IgnoreTextStartingWith=\u180e;
 TextGetterCompatibilityMode=False
 GameLogTextPaths=
